fix ff css + cleared tile + keybase

--- a/index.html
+++ b/index.html
@@ -165,63 +165,60 @@
 
                 <div>
                     <table class="about">
-                        <tbody>
-                            <tr>
-                                <td>Email</td>
-                                <td>
-                                    [first name]<code>at</code>[this domain]
-                                    <wbr />(<a href="keys.html">keys</a>)
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>Signal</td>
-                                <td>[private, contact me]</td>
-                            </tr>
-                            <tr>
-                                <td>Matrix</td>
-                                <td>
-                                    <span class="select-all"
-                                        >@mehvix:matrix.org</span
-                                    >
-                                    <wbr />(<a href="keys.html">keys</a>)
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>Discord</td>
-                                <td>
-                                    <span class="select-all">Mehvix#7966</span>
-                                    <wbr />(<a
-                                        href="//stallman.org/discord.html"
-                                        >if possible, don't use</a
-                                    >)
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>Session</td>
-                                <td style="vertical-align: middle">
-                                    <img
-                                        alt="Session QR Expand"
-                                        src="/static/media/expandoImage.svg"
-                                        class="dropdown"
-                                        onclick="toggleImage(session)"
-                                        style="
-                                            margin: 0 0.5ch;
-                                            height: 30.75px;
-                                            float: right;
-                                            display: inline;
-                                        "
-                                    />
-                                    <pre
-                                        style="
-                                            margin: 0;
-                                            display: inline;
-                                            float: right;
-                                        "
-                                    ><code style="margin: 0; width: 52vw; max-width: 41.45ch;" class="noscroll select-all">054d937b2d1395f1560551eeb1552e3e60308c0350623c92ad7f6f31e3411f161a</code></pre>
-                                    <!--fuck you firefox-->
-                                </td>
-                            </tr>
-                        </tbody>
+                        <tr>
+                            <td>Email</td>
+                            <td>
+                                [first name]<code>at</code>[this domain]
+                                <wbr />(<a href="keys.html">keys</a>)
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Signal</td>
+                            <td>[private, contact me]</td>
+                        </tr>
+                        <tr>
+                            <td>Matrix</td>
+                            <td>
+                                <span class="select-all"
+                                    >@mehvix:matrix.org</span
+                                >
+                                <wbr />(<a href="keys.html">keys</a>)
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Discord</td>
+                            <td>
+                                <span class="select-all">Mehvix#7966</span>
+                                <wbr />(<a href="//stallman.org/discord.html"
+                                    >if possible, don't use</a
+                                >)
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Session</td>
+                            <td style="vertical-align: middle">
+                                <img
+                                    alt="Session QR Expand"
+                                    src="/static/media/expandoImage.svg"
+                                    class="dropdown"
+                                    onclick="toggleImage(session)"
+                                    style="
+                                        margin: 0 0.5ch;
+                                        height: 30.75px;
+                                        float: right;
+                                        display: inline;
+                                    "
+                                />
+                                <pre
+                                    style="
+                                        margin: 0;
+                                        display: inline;
+                                        float: right;
+                                    "
+                                ><code style="margin: 0; width: 52vw; max-width: 41.45ch;" class="noscroll select-all">054d937b2d1395f1560551eeb1552e3e60308c0350623c92ad7f6f31e3411f161a</code></pre>
+                                <!--fuck you firefox-->
+                            </td>
+                        </tr>
                     </table>
 
                     <img
@@ -240,82 +237,90 @@
 
             <div>
                 <h1>Me</h1>
-
-                <li>
-                    Peep my (personal) projects on
-                    <a href="//github.com/mehvix">GitHub</a>
-                </li>
-                <li>
-                    Judge my
-                    <a href="//stackoverflow.com/users/7833617/"
-                        >Stack Overflow</a
-                    >
-                    answers
-                </li>
-                <li>
-                    Jam out to my
-                    <a href="//open.spotify.com/user/mehvix">Spotify</a>
-                    playlists
-                </li>
-                <li>
-                    Connect on the corporate cesspool
-                    <a href="//www.linkedin.com/in/mehvix/">LinkedIn</a>
-                </li>
-                <!-- todo: uncomment when resume updated -->
-                <!-- <li>
-                    Resumé
-                    <a
-                        href="//cloud.mehvix.com/s/9oXaWqbLR4amMmz"
-                        >Link</a
-                    >
-                </li> -->
+                <ul>
+                    <li>
+                        Peep my (personal) projects on
+                        <a href="//github.com/mehvix">GitHub</a>
+                    </li>
+                    <li>
+                        Judge my
+                        <a href="//stackoverflow.com/users/7833617/"
+                            >Stack Overflow</a
+                        >
+                        answers
+                    </li>
+                    <li>
+                        Jam out to my
+                        <a href="//open.spotify.com/user/mehvix">Spotify</a>
+                        playlists
+                    </li>
+                    <li>
+                        Connect on the corporate cesspool
+                        <a href="//www.linkedin.com/in/mehvix/">LinkedIn</a>
+                    </li>
+                    <li>
+                        Verify I am who I say I am through
+                        <a href="//keybase.io/mehvix/">Keybase</a>
+                    </li>
+                    <!-- todo: uncomment when resume updated -->
+                    <!-- <li>
+                        Resumé
+                        <a
+                            href="//cloud.mehvix.com/s/9oXaWqbLR4amMmz"
+                            >Link</a
+                        >
+                    </li> -->
+                </ul>
             </div>
 
             <div>
                 <h1>Pages</h1>
-                <li>
-                    <a href="//toolbox.mehvix.com">Toolbox</a>
-                </li>
-                <li>
-                    <a href="//pass.mehvix.com">Pass</a> (for Berkeley students)
-                </li>
-                <li>
-                    <a href="//notes.mehvix.com">Notes</a>
-                </li>
-                <li>
-                    <a href="posts">Blog</a> (<a href="posts/rss.xml">RSS</a>)
-                    -- three recent posts:
-                    <!-- todo automate this -->
-                    <ul id="sub-posts">
-                        <li>
-                            21-10-31 ::
-                            <a
-                                href="posts/tiling-distance.html"
-                                id="tiling-distance"
-                                >Tiling Distance Contradiction</a
-                            >
-                        </li>
-                        <li>
-                            21-06-18 ::
-                            <a href="posts/plans-2021.html" id="plans-2021"
-                                >Current Plans</a
-                            >
-                        </li>
-                        <li>
-                            21-05-18 ::
-                            <a href="posts/aops-rss.html" id="aops-rss"
-                                >AoPS Blogs + RSS</a
-                            >
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="/quotes">Quotes</a>
-                </li>
-                <li><a href="/todo">Projects TODO</a> (outdated)</li>
-                <li>
-                    <a href="/serverservices">Server</a>
-                </li>
+                <ul>
+                    <li>
+                        <a href="//toolbox.mehvix.com">Toolbox</a>
+                    </li>
+                    <li>
+                        <a href="//pass.mehvix.com">Pass</a> (for Berkeley
+                        students)
+                    </li>
+                    <li>
+                        <a href="//notes.mehvix.com">Notes</a>
+                    </li>
+                    <li>
+                        <a href="posts">Blog</a> (<a href="posts/rss.xml">RSS</a
+                        >)
+                        <!-- todo automate this -->
+                        <ul id="sub-posts">
+                            <li>
+                                21-10-31 ::
+                                <a
+                                    href="posts/tiling-distance.html"
+                                    id="tiling-distance"
+                                    >Tiling Distance Contradiction</a
+                                >
+                            </li>
+                            <li>
+                                21-06-18 ::
+                                <a href="posts/plans-2021.html" id="plans-2021"
+                                    >Current Plans</a
+                                >
+                            </li>
+                            <li>
+                                21-05-18 ::
+                                <a href="posts/aops-rss.html" id="aops-rss"
+                                    >AoPS Blogs + RSS</a
+                                >
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="/quotes">Quotes</a>
+                    </li>
+                    <li><a href="/todo">Projects TODO</a> (outdated)</li>
+                    <li>
+                        <a href="/serverservices">Server</a>
+                    </li>
+                </ul>
             </div>
 
             <div id="footer">
