--- a/quotes.html
+++ b/quotes.html
@@ -232,6 +232,40 @@
                             <a href="//youtu.be/ndmBCqds_gc?t=269">Jon Bois</a>
                         </p>
                     </div>
+                    
+                    <div>
+                        <b>Evil</b>
+                        <blockquote>
+                            It was granted me to carry away from my prison years
+                            on my bent back, which nearly broke beneath its
+                            load, this essential experience; how a human being
+                            becomes evil and how good. In the intoxication of
+                            youthful successes I had felt myself to be
+                            infallible, and I was therefore cruel. In the
+                            surfeit of power I was a murderer, and an oppressor.
+                            In my most evil moments I was convinced that I was
+                            doing good, and I was well supplied with systematic
+                            arguments. And it was only when I lay there on
+                            rotting prison straw that I sensed within myself the
+                            first stirrings of good. Gradually it was disclosed
+                            to me that the line separating good and evil passes
+                            not through states, nor between classes, nor between
+                            political parties either—but right through every
+                            human heart—and through all human hearts. This line
+                            shifts. Inside us, it oscillates with the years. And
+                            even within hearts overwhelmed by evil, one small
+                            bridgehead of good is retained. And even in the best
+                            of all hearts, there remains… an unuprooted small
+                            corner of evil.
+                        </blockquote>
+                        <p>
+                            <a
+                                href="http://libgen.rs/book/index.php?md5=5D5620C06690FF231D4DDF0F8D598243"
+                                >Aleksandr Solzhenitsyn, The Gulag
+                                Archipelago</a
+                            >
+                        </p>
+                    </div>
 
                     <div>
                         <b>In the Desert</b>
