quotes + anonym.to script + a i :select + pass

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                     at UW-Madhacks 2019. -->
                     Right now I'm a freshmen at
                     <a href="//www.berkeley.edu/">UC Berkeley</a> planning on
-                    majoring in <a href="//eecs.berkeley.edu/">EECS</a> (and/or)
+                    majoring in <a href="//eecs.berkeley.edu/">EECS</a> and/or
                     <a href="//me.berkeley.edu/">MechE</a>.
                     <script>
                         document.write(attr_selected)
@@ -153,10 +153,10 @@
                     <a href="//www.team1306.com">1306</a> stuff.
                 </p>
                 <p>
-                    I created this website (1) because I believe the web is
-                    better decentralized and (2) to also force myself into
-                    writing more often so I can improve communicating ideas
-                    through my <a href="/posts/index.html">blog</a>.
+                    <b>If you're a Berkeley student</b>, you're probably looking
+                    for
+                    <a href="//pass.mehvix.com"><i>pass</i>.mehvix.com</a> so
+                    you can get into the RSF.
                 </p>
             </div>
 
