cleaning up sass

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                                         display: inline;
                                         float: right;
                                     "
-                                ><code style="margin: 0; width: 52vw; max-width: 41.45ch;" class="noscroll select-all">054d937b2d1395f1560551eeb1552e3e60308c0350623c92ad7f6f31e3411f161a</code></pre>
+                                ><code style="margin: 0; width: 52vw; max-width: 41.45ch;" class="no-scroll select-all">054d937b2d1395f1560551eeb1552e3e60308c0350623c92ad7f6f31e3411f161a</code></pre>
                                 <!--fuck you firefox-->
                             </td>
                         </tr>
