--- a/quotes.html
+++ b/quotes.html
@@ -76,6 +76,23 @@
             <div class="main">
                 <article>
                     <div>
+                        <b>Japanese Cowboy</b>
+                        <blockquote>
+                            Like a Japanese cowboy or a brother on skates<br />
+                            Like a blizzard in Georgia or a train runnin'
+                            late<br />
+                            I called out your name, girl, in the heat of the
+                            night<br />
+                            And nobody answers, cause somethin' ain't right
+                        </blockquote>
+                        <p>
+                            <a href="//www.youtube.com/watch?v=Mui4CM2SKWM"
+                                >Ween</a
+                            >
+                        </p>
+                    </div>
+
+                    <div>
                         <b
                             >There Is As Yet Insufficient Data For A Meaningful
                             Answer</b
