upd home + media dirs

--- a/index.html
+++ b/index.html
@@ -98,11 +98,19 @@
         <div class="box">
             <div class="nav"><a href="" class="inverse-bg">~</a>/</div>
             <div>
+                <hr />
+                <p>
+                    <b>If you're a Berkeley student</b>, you're probably looking
+                    for
+                    <a href="//pass.mehvix.com"><i>pass</i>.mehvix.com</a> so
+                    you can get into the RSF.
+                </p>
+                <hr />
                 <p>
                     Hello! My name is Max Vogel, but <i>Mehvix</i> is my
                     username for most things on the web — I'm sure you can
                     figure out what it means. Here’s a
-                    <a href="./static/media/me/gmaps2.png">photo of me</a
+                    <a href="./static/media/home/me/gmaps2.png">photo of me</a
                     ><img
                         alt="Expand image"
                         src="/static/media/expandoImage.svg"
@@ -112,13 +120,13 @@
                     /><img
                         alt="Me!"
                         id="me"
-                        src="/static/media/me/gmaps2.png"
+                        src="/static/media/home/me/gmaps2.png"
                         style="width: 100%; margin: 1% 0"
                         class="hidden"
                     />
                     on Google Maps in 2007.
                     <!-- Here’s a
-                    <a href="./static/media/me/IMG_20191020_011042.jpg"
+                    <a href="./static/media/home/me/IMG_20191020_011042.jpg"
                         >photo of me</a
                     ><img
                         alt="Expand image"
@@ -129,7 +137,7 @@
                     /><img
                         alt="Me!"
                         id="me"
-                        src="/static/media/IMG_20191020_011042.jpg"
+                        src="/static/media/home/me/IMG_20191020_011042.jpg"
                         style="width: 100%; margin: 1% 0"
                         class="hidden"
                     />
@@ -137,27 +145,29 @@
                     Right now I'm a freshmen at
                     <a href="//www.berkeley.edu/">UC Berkeley</a> planning on
                     majoring in <a href="//eecs.berkeley.edu/">EECS</a> and/or
-                    <a href="//me.berkeley.edu/">MechE</a>.
+                    <a href="//me.berkeley.edu/">MechE</a>. In my free time I
+                    enjoy
+                    <a href="http://www.cracoviafoilfencing.com/"
+                        >foil fencing</a
+                    >,
+                    <a href="//www.instagram.com/tyrolbasinparks/"
+                        >snowboarding park</a
+                    >,
+                    <a href="/static/media/home/IMG_20210327_113246.jpg"
+                        >hiking earth</a
+                    >, among just building cool stuff: I'm an <i>amateur</i>
+                    <a href="//cloud.mehvix.com">server administrator</a>,
+                    mycologist, 3D printer, and
+                    <a href="/static/media/home/20210816-001132.png"
+                        >pyrotechnic</a
+                    >
+                    (in that order, least to most amateur). Fun fact:
                     <script>
                         document.write(attr_selected)
                     </script>
-                    In my free time I enjoy
-                    <a href="http://www.cracoviafoilfencing.com/">fencing</a>,
-                    <a href="//www.instagram.com/tyrolbasinparks/"
-                        >snowboarding</a
-                    >, coding, CADing,
-                    <a
-                        href="//open.spotify.com/playlist/2uEoR9SXgtMSgjIjgohVnz?si=H0eRZQD_SW-AM0F1BCxEEQ"
-                        >listening to music</a
-                    >, and working on
-                    <a href="//www.team1306.com">1306</a> stuff.
                 </p>
-                <p>
-                    <b>If you're a Berkeley student</b>, you're probably looking
-                    for
-                    <a href="//pass.mehvix.com"><i>pass</i>.mehvix.com</a> so
-                    you can get into the RSF.
-                </p>
+
+                <br />
             </div>
 
             <div>
@@ -224,7 +234,7 @@
                     <img
                         alt="Session QR"
                         id="session"
-                        src="/static/media/session-qr.png"
+                        src="/static/media/home/session-qr.png"
                         style="
                             width: 25ch;
                             margin-left: 32ch;
