--- a/quotes.html
+++ b/quotes.html
@@ -139,7 +139,7 @@
                         <b>Math</b>
                         <blockquote>
                             <img
-                                src="/static/media/calvin.jpg"
+                                src="/static/media/quotes/calvin.jpg"
                                 alt=""
                                 style="width: 30% !important"
                             />
