msri upd, button css

--- a/index.html
+++ b/index.html
@@ -166,8 +166,7 @@
                         document.write(attr_selected)
                     </script>
                 </p>
-
-                <br />
+                <button>testing</button>
             </div>
 
             <div>
@@ -250,27 +249,27 @@
                 <ul>
                     <li>
                         Peep my (personal) projects on
-                        <a href="//github.com/mehvix">GitHub</a>
+                        <a href="//github.com/mehvix">GitHub</a>.
                     </li>
                     <li>
                         Judge my
                         <a href="//stackoverflow.com/users/7833617/"
                             >Stack Overflow</a
                         >
-                        answers
+                        answers.
                     </li>
                     <li>
                         Jam out to my
-                        <a href="//open.spotify.com/user/mehvix">Spotify</a>
+                        <a href="//open.spotify.com/user/mehvix">Spotify</a>.
                         playlists
                     </li>
                     <li>
                         Connect on the corporate cesspool
-                        <a href="//www.linkedin.com/in/mehvix/">LinkedIn</a>
+                        <a href="//www.linkedin.com/in/mehvix/">LinkedIn</a>.
                     </li>
                     <li>
                         Verify I am who I say I am through
-                        <a href="//keybase.io/mehvix/">Keybase</a>
+                        <a href="//keybase.io/mehvix/">Keybase</a>.
                     </li>
                     <!-- todo: uncomment when resume updated -->
                     <!-- <li>
