--- a/quotes.html
+++ b/quotes.html
@@ -400,10 +400,10 @@
                             corner of evil.
                         </blockquote>
                         <p>
+                            Aleksandr Solzhenitsyn,
                             <a
                                 href="http://libgen.rs/book/index.php?md5=5D5620C06690FF231D4DDF0F8D598243"
-                                >Aleksandr Solzhenitsyn, The Gulag
-                                Archipelago</a
+                                >The Gulag Archipelago</a
                             >
                         </p>
                     </div>
