--- a/index.html
+++ b/index.html
@@ -79,6 +79,28 @@
             .hidden {
                 display: none;
             }
+
+            /* For attr */
+            @font-face {
+                font-family: 'Aachen-Bold';
+                src: url('/static/font/Aachen-Bold.woff2') format('woff2');
+            }
+
+            .pulp-fiction {
+                font-family: 'Aachen-Bold';
+                font-size: 95%;
+            }
+
+            @font-face {
+                font-family: 'aoe2';
+                src: url('/static/font/CentaurMT.woff2') format('woff2');
+            }
+
+            .aoe2 {
+                font-family: 'aoe2';
+                font-weight: bolder;
+                font-size: 110%;
+            }
         </style>
 
         <link
@@ -153,7 +175,7 @@
                     <a href="//www.instagram.com/tyrolbasinparks/"
                         >snowboarding park</a
                     >,
-                    <a href="/static/media/home/IMG_20210327_113246.jpg"
+                    <a href="/static/media/home/IMG_20210616_131213.jpg"
                         >hiking earth</a
                     >, among just building cool stuff: I'm an <i>amateur</i>
                     <a href="//cloud.mehvix.com">server administrator</a>,
@@ -259,8 +281,8 @@
                     </li>
                     <li>
                         Jam out to my
-                        <a href="//open.spotify.com/user/mehvix">Spotify</a>.
-                        playlists
+                        <a href="//open.spotify.com/user/mehvix">Spotify</a>
+                        playlists.
                     </li>
                     <li>
                         Connect on the corporate cesspool
@@ -271,6 +293,8 @@
                         <a href="//keybase.io/mehvix/">Keybase</a>.
                     </li>
                     <!-- todo: uncomment when resume updated -->
+                    <!-- later note: ehhhh most ppl who list resume on their personal websites tend to be asses -->
+                    <!-- if you're reading this hi! I'll leave this link in as an easter egg now please hire me -->
                     <!-- <li>
                         Resumé
                         <a
