--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                     <!-- <li>
                         Resumé
                         <a
-                            href="//cloud.mehvix.com/s/9oXaWqbLR4amMmz"
+                            href="https://cloud.mehvix.com/s/ePa34QwXgT4D29j"
                             >Link</a
                         >
                     </li> -->
