--- a/keys.html
+++ b/keys.html
@@ -194,7 +194,7 @@ LKutr+KwFwaJLLcqxjciyMueRAnPoKrodbIZ+ALMR2GMhJD6y7RuDBm1ll7c
                     <code>716A ED52 8DDC B0EF</code>
                 </li>
             </ul>
-            <pre><code class="pgp select-all language-sh no-scroll">curl -L https://mehvix.com/static/media/Max Vogel_0x8DDCB0EF_public.asc | gpg --import</code></pre>
+            <pre><code class="pgp select-all language-sh no-scroll">curl -L https://www.mehvix.com/static/media/Max%20Vogel_0x8DDCB0EF_public.asc | gpg --import</code></pre>
 
             <details>
                 <summary>Reveal Personal Key</summary>
