--- a/keys.html
+++ b/keys.html
@@ -196,10 +196,10 @@ LKutr+KwFwaJLLcqxjciyMueRAnPoKrodbIZ+ALMR2GMhJD6y7RuDBm1ll7c
             </ul>
             <pre><code class="pgp select-all language-sh no-scroll">curl -L https://www.mehvix.com/static/media/Max%20Vogel_0x8DDCB0EF_public.asc | gpg --import</code></pre>
 
-            <details>
+            <details id="pgp-personal">
                 <summary>Reveal Personal Key</summary>
 
-                <pre><code id="pgp-personal" class="select-all language-diff">-----BEGIN PGP PUBLIC KEY BLOCK-----
+                <pre><code  class="select-all language-diff">-----BEGIN PGP PUBLIC KEY BLOCK-----
 
 mQINBGEQQXYBEACeHbxJ976g7UoZfhrklvWRsbPGknVzat9RwOGlej1Cld3WNGB+
 EJGLQRTtiraZaHo2Y3NW9wYT6sBBG+Ej10VOtY/LCkX3ZR62u3ttq6YSavsJUVzZ
