--- a/index.html
+++ b/index.html
@@ -319,10 +319,19 @@
                         <a href="//notes.mehvix.com">Notes</a>
                     </li>
                     <li>
+                        <a href="//mse.mehvix.com">M. Scheme EschQR</a>
+                    </li>
+                    <li>
                         <a href="posts">Blog</a> (<a href="posts/rss.xml">RSS</a
                         >)
                         <!-- todo automate this -->
                         <ul id="sub-posts">
+                            <li>
+                                21-12-09 ::
+                                <a href="posts/pass.html" id="pass"
+                                    >Killing pass.mehvix.com</a
+                                >
+                            </li>
                             <li>
                                 21-10-31 ::
                                 <a
